[package]
name = "block-fortress"
version = "0.0.1"
authors = ["vnmrd <stefanosetti195@gmail.com>"]
edition = "2021"
description = "Small blockchain game inspired from Dwarf Fortres and some RTS games."

[lib]
crate-type = ["cdylib"]

[dependencies]
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust" }
#trinci-sdk = { git = "https://ignore:Hvd9ZmFPu2-gutPHH_R1@gitlab.affidaty.net/developer2/trinci-github/trinci-sdk-rust.git", branch = "develop" }

serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
rmp-serde = "1.0.0"
hex = "0.4.3"
ed25519-dalek = "1.0.1"
bs58 = "0.4.0"
sha2 = "0.10.1"
